1.18: Code fixes & proof of concept pack